--- a/Example/MoABContactsManager/Main.storyboard
+++ b/Example/MoABContactsManager/Main.storyboard
@@ -22,7 +22,7 @@
             </objects>
             <point key="canvasLocation" x="-78" y="395"/>
         </scene>
-        <!--Mo View Controller-->
+        <!--Contacts Manager-->
         <scene sceneID="zoo-MU-PYv">
             <objects>
                 <viewController id="VUg-UD-6uH" customClass="MoViewController" sceneMemberID="viewController">
@@ -56,7 +56,7 @@
                                     <constraint firstAttribute="height" constant="50" id="mfR-PV-Upl"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="urO-Wu-G4o">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="urO-Wu-G4o">
                                 <rect key="frame" x="0.0" y="50" width="320" height="454"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -127,10 +127,10 @@
                             <constraint firstItem="urO-Wu-G4o" firstAttribute="leading" secondItem="Q5e-K3-gJx" secondAttribute="leading" id="v0Q-Ih-glv"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="OxK-jD-PYF">
+                    <navigationItem key="navigationItem" title="Contacts Manager" id="OxK-jD-PYF">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="11w-kN-oLg">
                             <connections>
-                                <segue destination="1k1-Dv-SPM" kind="push" id="7OS-EP-Vkx"/>
+                                <segue destination="1k1-Dv-SPM" kind="push" identifier="toEditContact" id="7OS-EP-Vkx"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -142,10 +142,10 @@
             </objects>
             <point key="canvasLocation" x="500" y="390"/>
         </scene>
-        <!--View Controller-->
+        <!--Mo Add Edit Contact View Controller-->
         <scene sceneID="fw4-e1-9Si">
             <objects>
-                <viewController id="1k1-Dv-SPM" sceneMemberID="viewController">
+                <viewController id="1k1-Dv-SPM" customClass="MoAddEditContactViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qkS-ds-qT4"/>
                         <viewControllerLayoutGuide type="bottom" id="wXr-yF-L2h"/>
@@ -154,47 +154,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="First Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zNN-fK-a7C">
-                                <rect key="frame" x="16" y="88" width="89" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zNN-fK-a7C">
+                                <rect key="frame" x="16" y="24" width="89" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Last Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KOP-k2-Qob">
-                                <rect key="frame" x="16" y="133" width="88" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KOP-k2-Qob">
+                                <rect key="frame" x="16" y="69" width="88" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vXi-hZ-I6K">
-                                <rect key="frame" x="113" y="84" width="175" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vXi-hZ-I6K">
+                                <rect key="frame" x="113" y="20" width="175" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zyO-fU-4wo">
-                                <rect key="frame" x="113" y="129" width="175" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zyO-fU-4wo">
+                                <rect key="frame" x="113" y="65" width="175" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Phone:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNH-l8-bac">
-                                <rect key="frame" x="16" y="178" width="54" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNH-l8-bac">
+                                <rect key="frame" x="16" y="114" width="54" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxf-AN-7qg">
-                                <rect key="frame" x="113" y="174" width="175" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxf-AN-7qg">
+                                <rect key="frame" x="113" y="110" width="175" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Email:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-nD-zAo">
-                                <rect key="frame" x="16" y="223" width="54" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-nD-zAo">
+                                <rect key="frame" x="16" y="159" width="47" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u3O-wr-kia">
-                                <rect key="frame" x="113" y="219" width="175" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u3O-wr-kia">
+                                <rect key="frame" x="113" y="155" width="175" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -224,8 +224,18 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uF5-4O-WGa">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="d2s-1O-el4"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="d2s-1O-el4">
+                            <connections>
+                                <action selector="saveButtonTouched:" destination="1k1-Dv-SPM" id="PSd-UE-zop"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="emailTextField" destination="u3O-wr-kia" id="yWp-OV-pAN"/>
+                        <outlet property="firstNameTextField" destination="vXi-hZ-I6K" id="aj4-ua-HXN"/>
+                        <outlet property="lastNameTextField" destination="zyO-fU-4wo" id="KMW-yp-8eU"/>
+                        <outlet property="phoneTextField" destination="bxf-AN-7qg" id="T2M-Qn-SYh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XcA-CK-VDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
